Assignment_1/FPGA/PongDesign/PongDesign.sdk/.metadata/.plugins/org.eclipse.cdt.ui/FirstPong.build.log
23:23:23 **** Incremental Build of configuration Debug for project FirstPong ****
make pre-build main-build 
a9-linaro-pre-build-step
' '
'Building file: ../src/PongFunc.c'
'Invoking: ARM v7 gcc compiler'
arm-none-eabi-gcc -Wall -O0 -g3 -c -fmessage-length=0 -MT"src/PongFunc.o" -mcpu=cortex-a9 -mfpu=vfpv3 -mfloat-abi=hard -I../../FirstPong_bsp/ps7_cortexa9_0/include -MMD -MP -MF"src/PongFunc.d" -MT"src/PongFunc.o" -o "src/PongFunc.o" "../src/PongFunc.c"
../src/PongFunc.c:1:10: error: #include expects "FILENAME" or <FILENAME>
 #include PongHead.h
          ^~~~~~~~
../src/PongFunc.c: In function 'StartGame':
../src/PongFunc.c:5:5: error: 'color' undeclared (first use in this function)
     color = 4;
     ^~~~~
../src/PongFunc.c:5:5: note: each undeclared identifier is reported only once for each function it appears in
../src/PongFunc.c:7:5: warning: implicit declaration of function 'drawLine' [-Wimplicit-function-declaration]
     drawLine( 1, 10, 1, 15); //Stel hier de breedte balk in
     ^~~~~~~~
../src/PongFunc.c:10:15: error: 'bigX' undeclared (first use in this function)
     drawLine((bigX*8), 10, (bigX*8), 15);
               ^~~~
../src/PongFunc.c:11:5: warning: implicit declaration of function 'DrawScoreBoard' [-Wimplicit-function-declaration]
     DrawScoreBoard();
     ^~~~~~~~~~~~~~
../src/PongFunc.c:12:5: warning: implicit declaration of function 'CyDelay' [-Wimplicit-function-declaration]
     CyDelay(10);
     ^~~~~~~
../src/PongFunc.c:13:5: warning: implicit declaration of function 'clearBORD' [-Wimplicit-function-declaration]
     clearBORD();
     ^~~~~~~~~
../src/PongFunc.c: In function 'ticker':
../src/PongFunc.c:19:5: warning: implicit declaration of function 'hitdetect' [-Wimplicit-function-declaration]
     hitdetect();
     ^~~~~~~~~
../src/PongFunc.c:20:5: error: 'BallX' undeclared (first use in this function)
     BallX = BallX + BallMovex;
     ^~~~~
../src/PongFunc.c:20:21: error: 'BallMovex' undeclared (first use in this function)
     BallX = BallX + BallMovex;
                     ^~~~~~~~~
../src/PongFunc.c:21:5: error: 'BallY' undeclared (first use in this function)
     BallY = BallY + BallMovey;
     ^~~~~
../src/PongFunc.c:21:21: error: 'BallMovey' undeclared (first use in this function)
     BallY = BallY + BallMovey;
                     ^~~~~~~~~
../src/PongFunc.c: At top level:
../src/PongFunc.c:25:6: warning: conflicting types for 'hitdetect'
 void hitdetect()
      ^~~~~~~~~
../src/PongFunc.c:19:5: note: previous implicit declaration of 'hitdetect' was here
     hitdetect();
     ^~~~~~~~~
../src/PongFunc.c: In function 'hitdetect':
../src/PongFunc.c:27:7: error: 'BallMovex' undeclared (first use in this function)
   if( BallMovex == 1 && BallX == ((LokatieBalkR-1))  )
       ^~~~~~~~~
../src/PongFunc.c:27:25: error: 'BallX' undeclared (first use in this function)
   if( BallMovex == 1 && BallX == ((LokatieBalkR-1))  )
                         ^~~~~
../src/PongFunc.c:27:36: error: 'LokatieBalkR' undeclared (first use in this function)
   if( BallMovex == 1 && BallX == ((LokatieBalkR-1))  )
                                    ^~~~~~~~~~~~
../src/PongFunc.c:29:7: error: 'BallY' undeclared (first use in this function)
   if (BallY == BalkRechts || BallY == BalkRechts+1)
       ^~~~~
../src/PongFunc.c:29:16: error: 'BalkRechts' undeclared (first use in this function)
   if (BallY == BalkRechts || BallY == BalkRechts+1)
                ^~~~~~~~~~
../src/PongFunc.c:32:3: error: 'BallMovey' undeclared (first use in this function)
   BallMovey = -1;
   ^~~~~~~~~
../src/PongFunc.c:33:13: error: 'BalkHit' undeclared (first use in this function)
             BalkHit++;
             ^~~~~~~
../src/PongFunc.c:49:41: error: 'LokatieBalkL' undeclared (first use in this function)
  else if ( BallMovex == -1 && BallX == (LokatieBalkL+1))
                                         ^~~~~~~~~~~~
../src/PongFunc.c:51:16: error: 'BalkLinks' undeclared (first use in this function)
   if (BallY == BalkLinks || BallY == BalkLinks+1)
                ^~~~~~~~~
../src/PongFunc.c:70:20: error: 'bigY' undeclared (first use in this function)
     if (BallY == ((bigY-2)*8) || BallY == 1)
                    ^~~~
../src/PongFunc.c:79:12: error: 'ScoreP2' undeclared (first use in this function)
         if(ScoreP2[1]<'9'){
            ^~~~~~~
../src/PongFunc.c:80:13: error: 'player2score' undeclared (first use in this function)
             player2score++;
             ^~~~~~~~~~~~
../src/PongFunc.c:81:14: warning: implicit declaration of function 'sprintf' [-Wimplicit-function-declaration]
              sprintf(&ScoreP2[1], "%d", player2score); //Zet integer rechts om in een string en plaats in array links
              ^~~~~~~
../src/PongFunc.c:81:14: warning: incompatible implicit declaration of built-in function 'sprintf'
../src/PongFunc.c:81:14: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../src/PongFunc.c:1:1:
+#include <stdio.h>
 #include PongHead.h
../src/PongFunc.c:81:14:
              sprintf(&ScoreP2[1], "%d", player2score); //Zet integer rechts om in een string en plaats in array links
              ^~~~~~~
../src/PongFunc.c:85:13: warning: incompatible implicit declaration of built-in function 'sprintf'
             sprintf(&ScoreP2[0], "%d", player2score);
             ^~~~~~~
../src/PongFunc.c:85:13: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../src/PongFunc.c:86:13: error: 'ScoreP1' undeclared (first use in this function)
             ScoreP1[1] = '0';
             ^~~~~~~
../src/PongFunc.c:88:9: warning: implicit declaration of function 'readController' [-Wimplicit-function-declaration]
         readController(1,1);
         ^~~~~~~~~~~~~~
../src/PongFunc.c:92:17: warning: implicit declaration of function 'rand' [-Wimplicit-function-declaration]
         BallX = rand()%40+25;
                 ^~~~
../src/PongFunc.c:95:9: error: 'ronde' undeclared (first use in this function)
         ronde++;
         ^~~~~
../src/PongFunc.c:106:11: error: 'player1score' undeclared (first use in this function)
           player1score++;
           ^~~~~~~~~~~~
../src/PongFunc.c:107:11: warning: incompatible implicit declaration of built-in function 'sprintf'
           sprintf(&ScoreP1[1], "%d", player1score); //Zet integer rechts om in een string en plaats in array links
           ^~~~~~~
../src/PongFunc.c:107:11: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../src/PongFunc.c:111:13: warning: incompatible implicit declaration of built-in function 'sprintf'
             sprintf(&ScoreP1[0], "%d", player1score);
             ^~~~~~~
../src/PongFunc.c:111:13: note: include '<stdio.h>' or provide a declaration of 'sprintf'
../src/PongFunc.c: In function 'drawPixel':
../src/PongFunc.c:132:11: error: 'bigY' undeclared (first use in this function)
    if (Y<=bigY*8 && X<=bigX*8 && X>0 && Y>0) {
           ^~~~
../src/PongFunc.c:132:24: error: 'bigX' undeclared (first use in this function)
    if (Y<=bigY*8 && X<=bigX*8 && X>0 && Y>0) {
                        ^~~~
../src/PongFunc.c:138:9: error: 'NumberX' undeclared (first use in this function)
       p=NumberX-((X-1)/8)-1;
         ^~~~~~~
../src/PongFunc.c:140:7: error: 'dataArray' undeclared (first use in this function)
       dataArray[3*(Y-1)+24*p]&=~(1<<((X-1)%8));                  //turn off chosen drawPixel
       ^~~~~~~~~
../src/PongFunc.c:144:11: error: 'color' undeclared (first use in this function)
       if (color&1) dataArray[3*(Y-1)+24*p]|=(1<<((X-1)%8));      //set color to the drawPixel
           ^~~~~
../src/PongFunc.c: In function 'DrawGame':
../src/PongFunc.c:155:9: error: 'BalkHit' undeclared (first use in this function)
     if((BalkHit==1) && (BallX==40) && LokatieBalkL<32){
         ^~~~~~~
../src/PongFunc.c:155:39: error: 'LokatieBalkL' undeclared (first use in this function)
     if((BalkHit==1) && (BallX==40) && LokatieBalkL<32){
                                       ^~~~~~~~~~~~
../src/PongFunc.c:157:9: error: 'LokatieBalkR' undeclared (first use in this function)
         LokatieBalkR = LokatieBalkR -8;
         ^~~~~~~~~~~~
../src/PongFunc.c:161:5: error: 'color' undeclared (first use in this function)
     color = 4;
     ^~~~~
../src/PongFunc.c:162:29: error: 'BalkLinks' undeclared (first use in this function)
     drawLine( LokatieBalkL, BalkLinks, LokatieBalkL, BalkLinks+5);
                             ^~~~~~~~~
../src/PongFunc.c:164:29: error: 'BalkRechts' undeclared (first use in this function)
     drawLine( LokatieBalkR, BalkRechts, LokatieBalkR, BalkRechts+5);
                             ^~~~~~~~~~
../src/PongFunc.c:168:5: warning: implicit declaration of function 'display' [-Wimplicit-function-declaration]
     display();
     ^~~~~~~
../src/PongFunc.c: At top level:
../src/PongFunc.c:174:10: warning: conflicting types for 'drawLine'
     void drawLine (int x1, int y1, int x2, int y2) {      //draw a line from x1,y1 to x2,y2
          ^~~~~~~~
../src/PongFunc.c:7:5: note: previous implicit declaration of 'drawLine' was here
     drawLine( 1, 10, 1, 15); //Stel hier de breedte balk in
     ^~~~~~~~
../src/PongFunc.c: In function 'drawLine':
../src/PongFunc.c:177:9: warning: implicit declaration of function 'abs' [-Wimplicit-function-declaration]
    dx = abs (x2-x1);
         ^~~
../src/PongFunc.c: At top level:
../src/PongFunc.c:201:6: error: redefinition of 'drawLine'
 void drawLine (int x1, int y1, int x2, int y2) {      //draw a line from x1,y1 to x2,y2
      ^~~~~~~~
../src/PongFunc.c:174:10: note: previous definition of 'drawLine' was here
     void drawLine (int x1, int y1, int x2, int y2) {      //draw a line from x1,y1 to x2,y2
          ^~~~~~~~
make: *** [src/subdir.mk:26: src/PongFunc.o] Error 1

23:23:24 Build Finished (took 292ms)

